add edit button to post detail page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1285,6 +1285,9 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
@@ -1407,6 +1410,9 @@ video {
 }
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .cursor-not-allowed {
   cursor: not-allowed;
