--- a/views/post-details.hbs
+++ b/views/post-details.hbs
@@ -10,7 +10,17 @@
 
     <!-- Article header -->
     <header class="mb-8">
-      <h1 class="text-4xl font-bold text-white mb-4 leading-tight">{{post.title}}</h1>
+      <div class="flex justify-between items-start mb-4">
+        <h1 class="text-4xl font-bold text-white leading-tight flex-grow">{{post.title}}</h1>
+        {{#if user}}
+          <a href="/admin/posts/edit/{{post._id}}" class="ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-cyan-500 whitespace-nowrap">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 20 20" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+            </svg>
+            Edit Post
+          </a>
+        {{/if}}
+      </div>
       <div class="flex items-center text-sm text-gray-400">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
