--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -55,7 +55,7 @@
             <tr class="hover:bg-gray-750 transition-colors">
               <td class="px-6 py-4 max-w-xs ">
                 {{!-- debug --}}
-                <div class="text-sm font-medium text-white truncate">{{title}}</div>
+                <a href="/post/{{slug}}" target="_blank" class="text-sm font-medium text-white truncate hover:text-cyan-400 hover:underline block">{{title}}</a>
                 <div class="text-sm text-gray-400 truncate">{{truncate slug 30}}</div>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-300">
