--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -31,7 +31,9 @@
   {{/if}}
   
   {{!-- Main Admin Content --}}
-  {{{body}}}
+  <main id="main-content" class="container mx-auto px-4 py-8" tabindex="-1">
+    {{{body}}}
+  </main>
   {{!-- No footer for admin layout --}}
   <script src="
 https://cdn.jsdelivr.net/npm/marked@15.0.11/lib/marked.umd.min.js
